<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcf4af"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cherish.bustracker.activity.MainActivity">

    <TextView
        android:id="@+id/textView_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/main_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_Title"
        android:layout_centerHorizontal="true"
        android:text="@string/main_subtitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp" />

    <Button
        android:id="@+id/route_template"
        style="@style/RouteButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_Title"
        android:layout_alignRight="@id/textView_Title"
        android:layout_below="@+id/textView_Subtitle"
        android:layout_marginTop="12dp"
        android:text="@string/route_1"
        android:visibility="gone" />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:autoLink="email"
        android:clickable="true"
        android:text="@string/send_feedback"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/secondary_text_default_material_light" />

</RelativeLayout>
