<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="75sp"
    tools:context="com.cherish.bustracker.activity.fragments.BusTimesFragment">

    <TextView
        android:id="@+id/time_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/bus_times_display"
        android:textColor="@color/primary_dark_material_dark"
        android:textSize="30sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/time_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30sp"
        android:layout_toRightOf="@id/time_display"
        android:text="@string/default_eta"
        android:textColor="@color/primary_dark_material_dark"
        android:textSize="24sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/time_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time_1"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/time_display"
        android:text="@string/default_eta"
        android:textColor="@color/primary_dark_material_dark"
        android:textSize="24sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/time_inactive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/bus_inactive"
        android:textColor="@color/primary_dark_material_dark"
        android:textSize="24sp"
        android:visibility="gone" />

</RelativeLayout>


